@@ -125,7 +125,9 @@ Timestamp of sample creation
 
   data_type: 'varchar'
   is_nullable: 1
-  size: 50
+  size: 255
+
+A unique identifier generated by the INSDC
 
 =head2 common_name
 
@@ -481,7 +483,7 @@ __PACKAGE__->add_columns(
   'organism',
   { data_type => 'varchar', is_nullable => 1, size => 255 },
   'accession_number',
-  { data_type => 'varchar', is_nullable => 1, size => 50 },
+  { data_type => 'varchar', is_nullable => 1, size => 255 },
   'common_name',
   { data_type => 'varchar', is_nullable => 1, size => 255 },
   'description',
@@ -786,8 +788,8 @@ __PACKAGE__->has_many(
 );
 
 
-# Created by DBIx::Class::Schema::Loader v0.07051 @ 2023-02-23 11:12:46
-# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:mDkQ0kpnyj+FNE+gMXM8Pg
+# Created by DBIx::Class::Schema::Loader v0.07051 @ 2023-07-21 23:04:20
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:DRS5DAVcJJYnD73XvOGlzA
 
 our $VERSION = '0';
 
