@@ -1,6 +1,9 @@
 LIST OF CHANGES
 ---------------
 
+ - Add plate_number column to the pac_bio_run_well_metrics table and bring
+   DBIx classes up to date.
+
 release 6.28.0
  - Add get_tags methods to pac_bio_run and pac_bio_product_metrics table
    bindings
